# primare-serial-connector

./: .gitignore  CLAUDE.md  LICENSE  docker-compose.yml
home-assistant-plugin/: README.md  __init__.py  config_flow.py  const.py  manifest.json  media_player.py  strings.json
service/: Cargo.toml  Dockerfile  README.md  ci.yml
service/src/: api.rs  commands.rs  error.rs  main.rs  protocol.rs  serial.rs  state.rs
tools/: mock_amp.py
