[package]
name = "primare-i22-rs232"
version = "0.1.0"
edition = "2021"
description = "REST API bridge for Primare I22 amplifier via RS232"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/primare-i22-rs232"

[[bin]]
name = "primare-i22-rs232"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"

[profile.release]
opt-level = "z"     # optimize for size
lto = true
codegen-units = 1
strip = true
